# stm32-climate-station

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  stm32-climate-station.ioc
App/: app.cpp  app.h
App/Adapters/: ds3231_adapter.cpp  ds3231_adapter.h  sht31_adapter.cpp  sht31_adapter.h
App/Inc/: app_config.h  app_controller.h  controller.h  data_structs.h  settings.h  settings_manager.h  system.h  user_interface.h  weather_data.h  weather_station.h
App/Interfaces/: clock.h  health_checkable.h  observer.h  weather_sensor.h
App/Models/: config_models.h  date_time.cpp  date_time.h  ui_models.h  weather_models.h
App/Modules/: display_engine.cpp  display_engine.h  ds3231_adapter.cpp  ds3231_adapter.h  ds3231_clock.cpp  ds3231_clock.h  file_manager.cpp  file_manager.h  sht31_adapter.cpp  sht31_adapter.h  sht31_sensor.cpp  sht31_sensor.h
App/Services/: alert_system.cpp  alert_system.h  application.cpp  application.h  data_structs.h  logger.cpp  logger.h  settings_manager.cpp  settings_manager.h  system_health.cpp  system_health.h  time_service.h  weather_station.cpp  weather_station.h
App/Src/: app.cpp  app_controller.cpp  controller.cpp  system.cpp  user_interface.cpp  weather_data.cpp  weather_station.cpp
App/UI/: config_screen.cpp  config_screen.h  screen.cpp  screen.h  ui_manager.cpp  ui_manager.h
App/Utils/: hardware_utils.h  time_util.h  utils.cpp  utils.h
app/: app.cpp  app.h  weather_data.cpp  weather_data.h  weather_station.cpp  weather_station.h
tests/: date_time_test.cpp  logger_test.cpp  system_health_test.cpp  weather_station_test.cpp
(+90 files in other folders)
